--- a/levi/.env
+++ b/levi/.env
@@ -8,8 +8,8 @@ EMAIL_HOST = smtp.gmail.com
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
 EMAIL_HOST_USER = japhetebelechukwu@gmail.com
-#Generate your 16 digits password later
-EMAIL_HOST_PASSWORD = 533566Ja@
+#Generate your 16 digits password later ///tlbt dttj zddb muwt
+EMAIL_HOST_PASSWORD = tlbtdttjzddbmuwt
 DEFAULT_FROM_EMAIL = noreply@levifinance.com
 
 # Your Paystack MerchankKEYS
