--- a/levi/.env
+++ b/levi/.env
@@ -10,7 +10,7 @@ EMAIL_USE_TLS = True
 EMAIL_HOST_USER = japhetebelechukwu@gmail.com
 #Generate your 16 digits password later ///tlbt dttj zddb muwt
 EMAIL_HOST_PASSWORD = tlbtdttjzddbmuwt
-DEFAULT_FROM_EMAIL = noreply@levifinance.com
+DEFAULT_FROM_EMAIL = noreply@go-levi.com
 
 # Your Paystack MerchankKEYS
 PAYSTACK_SECRET_KEY=sk_test_XXXXXXXXXXXXXXXXXXXX
@@ -18,6 +18,6 @@ PAYSTACK_PUBLIC_KEY=pk_test_XXXXXXXXXXXXXXXXXXXX
 PAYSTACK_LIVE_SECRET_KEY=sk_live_XXXXXXXXXXXXXXXXXXXX
 PAYSTACK_LIVE_PUBLIC_KEY=pk_live_XXXXXXXXXXXXXXXXXXXX
 
-DATABASE_URL=https://api.levifinance.onrender.com/
+DATABASE_URL=https://api.go-levi.onrender.com/
 
 AWS_ACCESS_KEY_ID=AWS_1234
