--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 databases:
-  - name: go-levi-db
+  - name: levidb
     plan: free
-    databaseName: go_levi_db
-    user: go_levi_db_user
+    databaseName: mysite
+    user: mysite
 
 services:
   - type: web
@@ -14,7 +14,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: go_levi_db
+          name: levidb
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
