--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 databases:
-  - name: levidb
+  - name: roachdb
     plan: free
     databaseName: mysite
     user: mysite
@@ -7,14 +7,14 @@ databases:
 services:
   - type: web
     plan: free
-    name: levi
+    name: roach
     runtime: python
     buildCommand: './build.sh'
     startCommand: 'python -m gunicorn levi.asgi:application -k uvicorn.workers.UvicornWorker'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: levidb
+          name: roachdb
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
