--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,20 @@
 databases:
-  - name: roachdb
+  - name: go_levi_db
     plan: free
-    databaseName: mysite
-    user: mysite
+    databaseName: go_levi_db
+    user: go_levi_db_user
 
 services:
   - type: web
     plan: free
-    name: roach
+    name: golevi
     runtime: python
     buildCommand: './build.sh'
     startCommand: 'python -m gunicorn levi.asgi:application -k uvicorn.workers.UvicornWorker'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: roachdb
+          name: go-levi-db
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
