--- a/levi/.env
+++ b/levi/.env
@@ -18,6 +18,7 @@ PAYSTACK_PUBLIC_KEY=pk_test_XXXXXXXXXXXXXXXXXXXX
 PAYSTACK_LIVE_SECRET_KEY=sk_live_XXXXXXXXXXXXXXXXXXXX
 PAYSTACK_LIVE_PUBLIC_KEY=pk_live_XXXXXXXXXXXXXXXXXXXX
 
-DATABASE_URL=https://api.go-levi.onrender.com/
+#POSTGRES DB URL FROM RENDER
+DATABASE_URL=postgresql://go_levi_progresdb_user:PU64fUGSydhMAG0uFUU9vrcoPARAnKZg@dpg-d32t7pfdiees7393et30-a.oregon-postgres.render.com/go_levi_progresdb
 
 AWS_ACCESS_KEY_ID=AWS_1234
