--- a/levi/requirements.txt
+++ b/levi/requirements.txt
@@ -25,6 +25,9 @@ psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+
+python-socketio[asgi]==5.13.0
+
 PyYAML==6.0.2
 redis==5.2.1
 requests==2.32.4
